update seller
